[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "acornwalk"
version = "1.0.1"
authors = [
	{ name="0x78", email="contact@0x78.com" }
]
requires-python = ">=3.7"
description = "ECMAScript AST walker for the ESTree format. Python translation of acorn-walk"
readme = "README.md"
keywords = [
    "escodegen",
    "ecmascript",
    "javascript",
    "walker",
    "acorn",
	"ast"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Topic :: Software Development :: Compilers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: General",
    "Programming Language :: Python :: 3.7"
]

[project.urls]
"Homepage" = "https://github.com/0o120/acornwalk-python"

